Fix front page on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -26,3 +26,9 @@
   font-size: 1.3rem;
   font-weight: 300;
 }
+
+@media screen and (max-width: 992px) {
+  .number {
+    justify-content: center;
+  }
+}
